--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ install:
   - cmd: SET MAVEN_OPTS=-XX:MaxPermSize=2g -Xmx4g
   - cmd: SET JAVA_OPTS=-XX:MaxPermSize=2g -Xmx4g
 build_script:
-  - dir . /s /b sortorder:N
+  - dir c:\maven /s /b sortorder:N
   - mvn clean package --batch-mode -DskipTest
 test_script:
   - mvn clean install --batch-mode
