--- a/pom.xml
+++ b/pom.xml
@@ -94,20 +94,11 @@
 			<version>2.8.2</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.googlecode.soundlibs</groupId>
-			<artifactId>jlayer</artifactId>
-			<version>1.0.1.4</version>
-		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.googlecode.soundlibs/mp3spi -->
 		<dependency>
 			<groupId>com.googlecode.soundlibs</groupId>
 			<artifactId>mp3spi</artifactId>
-			<version>1.9.5.4</version>
-		</dependency>
-		<dependency>
-			<groupId>com.googlecode.soundlibs</groupId>
-			<artifactId>tritonus-share</artifactId>
-			<version>0.3.7.4</version>
+			<version>1.9.5-2</version>
 		</dependency>
 
 		<!-- tests things -->
